# gorest_api_autotests

./: .gitignore  README.md  pyproject.toml
allure-results/: 02d6339b-43a0-4d31-a63c-ae882177c231-attachment.txt  10462783-bd3a-4922-a3aa-c64d668e07c7-result.json  181152f3-9d77-487e-92e3-bd55f8d00fb0-result.json  1847f16f-23e4-4b9f-aeef-97713b09c238-attachment.txt  1d1e88bf-3ba0-46f8-be25-f56968d25151-attachment.json  22b0f77a-9e48-4e1a-ac8c-ba568d4765b3-container.json  2f7b0030-d060-4152-8b5b-50f7018a8417-result.json  34973766-30e1-4d71-828a-10d01e19b5f7-result.json  34d8fad1-6239-4e31-bd52-594e2afe75a3-attachment.txt  36f8e137-9e9c-4d43-b1b3-6d1cab70f2f5-attachment.json  3fddb26a-6f8c-4ddc-8a51-1b9672c3428f-container.json  40cee594-68e6-47c0-a3e7-8bbfd5394d1f-container.json  422ef1a5-b3c9-486c-9bbd-163175ec2a14-container.json  47454ac9-25b7-4a8a-b88d-fbd5eefc5787-result.json  4d54a4ce-4d80-4c4b-b6e1-18ef45ccc80b-attachment.txt  4dc8f77c-28c2-49d0-a305-eb8e84e78669-result.json  541c6492-8106-4fc6-8df2-36d914494e10-attachment.json  55583d75-ab7c-4a4b-88c0-80f9f0c0789b-attachment.txt  5af83580-66b0-4ee1-92d4-1a871b896168-container.json  5afc8e25-1619-4ec1-a8d8-252ac68d0ba8-attachment.txt  5c9ac4ff-2440-47f7-a06c-03d682cfe1a6-attachment.json  5d4c9db2-5901-4b0c-ab4b-bb352b7a9e5e-result.json  5dd981cf-61f2-4112-b4a8-3aee96e24b84-attachment.json  60d50d72-5ea7-4529-860c-6289fec8127d-result.json  6144c254-a818-44be-b05b-c4ad73570194-container.json  62adbb3b-22e9-4265-8c2e-3a556afe6e13-container.json  640be2a4-b60c-489d-a736-769c4866999d-result.json  (+55 more)
tests/: conftest.py  (+1 more)
(+31 files in other folders)
